# gmail_extractor

./: .gitignore  Cargo.toml  README.md
src/: main.rs
